tests/invalid_inputs/sema/class_unknown_member.cpp
struct S {

};

void f() {
	S s;
	s.a;	// error
}
